# rusty-poly-bot

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  README.md  RUST_PROJECT_PROMPT.md  start_all.ps1  start_all.sh
.claude/: settings.local.json
logs/: trades.csv
src/: binance.rs  config.rs  lib.rs  logger.rs  main.rs  money.rs  polymarket.rs  strategy.rs  tracker.rs
src/strategies/: mod.rs  three_candle_rsi7_reversal.rs
tests/: binance_tests.rs  config_tests.rs  logger_tests.rs  polymarket_tests.rs  polymarket_unit_tests.rs  strategy_tests.rs  tracker_tests.rs
